[package]
name = "nozomi"
version = "0.1.0"
authors = ["Andrew Vy <andrew@andrewvy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axiom = { git = "https://github.com/rsimmonsjr/axiom" }
serde = "1.0.103"
secc = "0.0.10"
